[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprite/Moving/Pufferfish.png" type="Texture" id=1]
[ext_resource path="res://Element/Mobs/pufferfish.gd" type="Script" id=2]


[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="Animation" id=3]
resource_name = "growing-once"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle-loop"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 5, 7.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 12.0, 20.0, -2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5, 6, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 2 ), Vector2( -1, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "shrinking-once"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[node name="Sprite" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BumperDetect" type="Area2D" parent="."]

[node name="BumpShape" type="CollisionShape2D" parent="BumperDetect"]
shape = SubResource( 1 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="AlertShape" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/growing-once = SubResource( 3 )
anims/idle-loop = SubResource( 4 )
anims/shrinking-once = SubResource( 5 )
[connection signal="body_entered" from="BumperDetect" to="." method="_on_BumperDetect_body_entered"]
[connection signal="body_exited" from="BumperDetect" to="." method="_on_BumperDetect_body_exited"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
